========================
django-profile Changelog
========================

Development version
-------------------
* Use of utils.gis to obtain more detailed Geo information.
* Better management of urls/view variables. Thanks to Alvaro Mouriño.
* Renamed APIKEY setting to GOOGLE_MAPS_API_KEY.
* Templates modified to do reverse URL.
* Added internacionalization of the urls. Credits to Alvaro Stevens.
* Changed the model of userprofile to solve the problem shown on this ticket:
	http://code.google.com/p/django-profile/issues/detail?id=25&can=1
* Django newforms-admin has been merged into trunk on revision [7967]. Newforms is now the official form management library, so this version of django-profile has been adapted to make it compatible with the new changes.
* This revision of django-profile is only compatible with django rev. [7967] or greater.
* Solved some issues with the form upload library. Thanks to Alvaro Mouriño.
* Make the Continent/Country models compatible with the new newforms-admin interface. Thanks to Alvaro Mouriño.
* Corrected a misspellings on the documentation. Thanks to paltman.

Version 0.5.0
-------------

* CSS and HTML formatted with Blueprint CSS (http://code.google.com/p/blueprintcss/).
* Lot of code optimization of Django, HTML, CSS and Javascript.
* Great effort on application usability and template design.
* Removed every javascript effectism not really needed.
* Lot of this work made as team with jonas.esp (http://code.google.com/u/jonas.esp/).


Version 0.4.2
-------------

* Changed the CSS structure. Now is managed with the great Blueprint CSS Framework. Thanks to Kless.
	http://code.google.com/p/blueprintcss/
* Some cleanup on the image directory.

Version 0.4.1
-------------
* Solved some bugs on the optional configuration parameters APIKEY and WEBSEARCH. Now they are
  totally optional. Thanks to Kless.
* Solved a bug on the image crop&resize. If you didn't select a portion of the image, an error