@@ -4,6 +4,7 @@ django-profile Changelog
 
 Development version
 -------------------
+* Password managament modified to use the new django password management utilities.
 * Use of utils.gis to obtain more detailed Geo information.
 * Better management of urls/view variables. Thanks to Alvaro Mouriño.
 * Renamed APIKEY setting to GOOGLE_MAPS_API_KEY.
